tests/trybuild/include_str_missing_permissions.rs
fn main() {
    include_optional::include_str_optional!("/dev/mem");
}